Updates CSS for hero and parallax images
Removed the "background-blend-mode" attribute, which caused several
issues, and replaced it with a gradient overlay. Images can now be seen
on every browser.

--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
   
 <header>
   <!--Left half of the hero image-->
-  <div id="leftHalf">
-  <div class="intro">
-    <h1 class="animated fadeInUp"><span style="color:#38a1d2">Robert</span></h1>
-    <h2 class="animated fadeInUp">journalist </h2>
-  </div>
+<div id="leftHalf">
+  <div class="overlay"></div>
+	<div class="intro">
+		<h1 class="animated fadeInUp"><span style="color:#38a1d2">Robert</span></h1>
+		<h2 class="animated fadeInUp">journalist </h2>
+	</div>
 </div>
 
 <!--Right half of the hero image-->
-    <div id="rightHalf">
-<div class="intro">
-    <h1 class="animated fadeInUp left"><span style="color:#FF4747">Wynne</span></h1>
-    <h2 class="animated fadeInUp left"> photographer</h2>
-  </div>
+<div id="rightHalf">
+	<div class="overlayBis"></div>
+	<div class="intro">
+		<h1 class="animated fadeInUp left"><span style="color:#FF4747">Wynne</span></h1>
+		<h2 class="animated fadeInUp left"> photographer</h2>
+	</div>
 </div>
 
 	<div id="scrollDown">
@@ -100,7 +102,7 @@
                 </div>
                 <div class="col-md-2 midimage">
              		<img class="img-responsive hidden-sm" src="img/man.jpg" alt="">
-					<div class="overlay"></div>
+					<div class="overlays"></div>
             	 </div>
                 <div class="col-md-5 introduction">
                 <h3 class="introTitle text-center" style="color:#38a1d2">What I do</h3>
